--- a/scalar_field_test.ipynb
+++ b/scalar_field_test.ipynb
@@ -16,7 +16,11 @@
    "source": [
     "\"\"\"\\\n",
     "# Copyright (C) 2024 Jesús Bautista Villar <jesbauti20@gmail.com>\n",
+    "- We use this notebook just to test the class where we have enconded \n",
+    "  all the mathematical expressions for the 2D scalar fields and tools\n",
+    "  to visualase them -\n",
     "\"\"\"\n",
+    "\n",
     "!python3 -V"
    ]
   },
@@ -258,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
