Google Colab block cell

--- a/distributed_estimation.ipynb
+++ b/distributed_estimation.ipynb
@@ -23,6 +23,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If executed from Google Colab\n",
+    "# !git clone https://github.com/jesusBV20/source_seeking_distr.git\n",
+    "# !rsync -a source_seeking_distr/ .\n",
+    "# !rm -r source_seeking_distr\n",
+    "\n",
+    "\n",
+    "# If you want to use latex with matplotlib\n",
+    "# !apt install -y texlive texlive-latex-extra texlive-fonts-recommended dvipng cm-super\n",
+    "# !pip install -y latex"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -8683,7 +8700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
