fix: scalar_field_test refactoring

--- a/notebooks/distributed_estimation.ipynb
+++ b/notebooks/distributed_estimation.ipynb
@@ -58,6 +58,7 @@
     "import sys\n",
     "from tqdm import tqdm\n",
     "\n",
+    "# Graphic tools\n",
     "from IPython.display import HTML\n",
     "from matplotlib.animation import PillowWriter\n",
     "import matplotlib.pyplot as plt\n",
