--- a/notebooks/simulations.ipynb
+++ b/notebooks/simulations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57,6 +57,7 @@
     "import sys\n",
     "from tqdm import tqdm\n",
     "\n",
+    "# Graphic tools\n",
     "from IPython.display import HTML\n",
     "from matplotlib.animation import PillowWriter\n",
     "\n",
