feat: scalar_field refactoring

--- a/notebooks/simulations.ipynb
+++ b/notebooks/simulations.ipynb
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory '..\\output' created!\n"
+      "The directory '..\\output' already exists!\n"
      ]
     }
    ],
@@ -68,8 +68,8 @@
     "    sys.path.append(module_path)\n",
     "\n",
     "# Scalar field functions\n",
-    "from sourceseeking_distr.scalar_field.sigma_common import sigma\n",
-    "from sourceseeking_distr.scalar_field.sigma_funcs import sigma_gauss, sigma_nonconvex, sigma_fract\n",
+    "from sourceseeking_distr.scalar_field.sigma_common import SigmaField\n",
+    "from sourceseeking_distr.scalar_field.sigma_funcs import SigmaGauss, SigmaNonconvex, SigmaFract \n",
     "\n",
     "# Simulators\n",
     "from sourceseeking_distr.simulator.sim_singint import SingIntSimulator\n",
@@ -141,8 +141,8 @@
     "# dev = [10,4]\n",
     "dev = 10\n",
     "\n",
-    "sigma_func = sigma_nonconvex(k=0.04, dev=dev, mu=mu)\n",
-    "sigma_field = sigma(sigma_func)"
+    "sigma_func = SigmaNonconvex(k=0.04, dev=dev, mu=mu)\n",
+    "sigma_field = SigmaField(sigma_func)"
    ]
   },
   {
