fix: distributed_estimation adapted to the scalar_field refactoring

--- a/notebooks/distributed_estimation.ipynb
+++ b/notebooks/distributed_estimation.ipynb
@@ -3770,8 +3770,7 @@
     "mu = [40,40]\n",
     "dev = 10\n",
     "\n",
-    "sigma_func = sigma_nonconvex(k=0.04, dev=dev, mu=mu)\n",
-    "sigma_field = sigma(sigma_func)\n",
+    "sigma_field = sigma_nonconvex(k=0.04, dev=dev, mu=mu)\n",
     "\n",
     "# Draw the scalar field\n",
     "fig = plt.figure(figsize=(5, 5), dpi=80)\n",
